[package]
name = "native_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
august_plugin_system = { path = "../../august_plugin_system" }
native_manager_codegen = { path = "codegen", optional = true }
libloading = "0.8.1"
semver = "1.0.21"
serde = "1.0.196"
thiserror = "1.0.56"
toml = "0.8.8"

[dev_dependencies]
native_manager_codegen = { path = "codegen" }

[features]
derive = ["dep:native_manager_codegen"]