[package]
name = "native-manager"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-manager-codegen = { path = "codegen", optional = true }
libloading = "0.8.8"
semver = "1.0.26"
serde = "1.0.219"
thiserror = "2.0.16"
toml = "0.9.5"

[dependencies.august-plugin-system]
git = "https://github.com/BleynChannel/august-plugin-system.git"
branch = "master"

[dev-dependencies]
native-manager-codegen = { path = "codegen" }

[features]
derive = ["dep:native-manager-codegen"]